#ifndef JUMPER_H
#define JUMPER_H

#include "zombie.h"

enum JumperActionState {
    JUMPER_MOVING,
    JUMPER_HURT,
    JUMPER_DYING,
    JUMPER_DEAD,
    JUMPER_ATTACKING,
    JUMPER_JUMPING,
    JUMPER_IDLE,
};

struct JumperDTO : ZombieDTO {
    JumperActionState actionState;
};

class Jumper : public Zombie {
   private:
    JumperActionState actionState;
    bool hasCrashed;

   public:
    Jumper(int xPosition, int yPosition, std::string zombieId, int mutationLevel);
    std::shared_ptr<EntityDTO> getDto() override;
    // int getAttackRange() override;
    Attack generateAttack() override;
    Attack generateJumpAttack();
    void attackPlayer() override;
    void startMoving() override;
    bool takeDamage(int damage) override;
    bool isMoving() override;
    void useSkill(std::vector<std::shared_ptr<Entity>> &players) override;
    std::shared_ptr<Ability> getActiveSkill();
    bool getplayerWithinRange(std::vector<std::shared_ptr<Entity>> &players);
    bool getHasCrashed();
    void startCrashing();
    void idle() override;
    bool checkIfDead() override;
    void kill() override;
    bool isDead() override;
    bool isRemovable() override;
    JumperActionState getActionState();
    ~Jumper();
};

#endif  // JUMPER_H